--- a/css/footer.css
+++ b/css/footer.css
@@ -18,7 +18,7 @@
 
 footer{
     width: 100%;
-    background-image: url('/img/backgroundfinal.png');
+    background-image: url('../img/backgroundfinal.png');
     background-size: cover;
 }
 
