--- a/css/menu.css
+++ b/css/menu.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .menu h1 {
