--- a/css/form.css
+++ b/css/form.css
@@ -4,6 +4,7 @@
     background-image: url('../img/background3.jpg');
     background-size: cover;
     width: 100%;
+    overflow: hidden;
 }
 
 .contato-title {
