--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,7 @@
 .imgs-footer {
     display: flex;
     width: 100%;
+    
     height: 30vh;
     margin-top: 5%;
     overflow-x: hidden;
@@ -10,6 +11,7 @@
 .imgs-footer img {
     flex: 1;
     transition: filter 0.3s ease;
+    object-fit: cover;
 }
 
 .imgs-footer img:hover {
@@ -20,7 +22,7 @@ footer{
     width: 100%;
     background-image: url('../img/backgroundfinal.png');
     background-size: cover;
-    overflow: hidden;
+
 }
 
 .footer {
